--- a/src/component/adminPage.scss
+++ b/src/component/adminPage.scss
@@ -1,24 +1,25 @@
-.admin-content{
+.admin-content {
+  width: 100%;
+  min-height: 600px;
+  margin-top: 120px;
+  table {
+    border-collapse: collapse;
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  td,
+  th {
+    padding: 5px;
+    height: 60px;
+  }
+  .button-add {
     width: 100%;
-    min-height: 600px;
-    margin-top: 120px;
-    table{ 
-        border-collapse: collapse; 
-        width: 70%; 
-        margin: 0 auto; 
-    } 
-     
-    td,th{ 
-        padding: 5px; 
-        height: 60px;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    button {
+      width: 40%;
     }
-    .button-add{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        margin-top: 30px;
-        button{
-            width: 40%;
-        }
-    }
+  }
 }
