--- a/src/component/modal.scss
+++ b/src/component/modal.scss
@@ -1,86 +1,48 @@
-.modal-background{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.6);
-    overflow: auto;
-    z-index: 1000;
-    transition: .3s linear;
-    top: 0;
+.modal-background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  overflow: auto;
+  z-index: 1000;
+  transition: 0.3s linear;
+  top: 0;
 }
 
-// .form-cont{ 
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: space-evenly;
-//     align-items: center;
-// } 
- 
-// .field{ 
-//     width: 80%;
-//     padding: 5px 5px; 
-//     outline: none; 
-// } 
- 
-// #submitBtn{ 
-//     width: 50%; 
-//     margin: 0 auto; 
-// }
+.form-group {
+  background-color: aliceblue;
+  margin: auto;
+  width: 60%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
 
+  align-items: center;
 
-// .product-cont{ 
-//     width: 40%; 
-//     display: flex; 
-//     background-color: aliceblue;
-//     flex-direction: column; 
-//     margin: 0 auto; 
-//     margin-bottom: 30px; 
-//     padding: 20px;
-// } 
- 
-// .formContEdit{ 
-//     display: flex; 
-//     flex-direction: column; 
-// }
-.form-group{
-background-color: aliceblue;
-margin: auto;
-width: 60%;
-height: 90%;
-display: flex;
-flex-direction: column;
-
-align-items: center;
-
-
-border: 3px solid rgb(41, 39, 39);;
+  border: 3px solid rgb(41, 39, 39);
 }
 
-
-.field{
-width: 80%;
-
+.field {
+  width: 80%;
 }
 
-.form-control{
-width: 100%;
-height: 20px;
-margin: 10px;
-padding: 5px;
+.form-control {
+  width: 100%;
+  height: 20px;
+  margin: 10px;
+  padding: 5px;
 }
 
-
-
-button{
-width: 80%;
-height: 30px;
-margin-top: 20px;
-margin-bottom: 50px;
-border: none;
-background-color: chocolate;
-color: wheat;
+button {
+  width: 80%;
+  height: 30px;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  border: none;
+  background-color: chocolate;
+  color: wheat;
 }
