--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -48,12 +48,18 @@ header {
     width: 400px;
     height: 550px;
     border-radius: 10px;
-    background-color: $primary;
+    background: $primary;
+    background: linear-gradient(180deg, $primary 0%, $secondary 100%);
     font-size: 50px;
+    transition: 0.3s ease;
 
     .category-title {
-      color: $dark;
+      color: $light;
       font-weight: 900;
+    }
+
+    &:hover {
+      filter: hue-rotate(-50deg);
     }
   }
 }
