rewrite ui for auth forms

--- a/src/styles/controls.scss
+++ b/src/styles/controls.scss
@@ -26,6 +26,7 @@
   gap: 5px;
   padding: 0 10px;
   width: 100px;
+  height: 35px;
   background-color: $primary;
   border: none;
   border-radius: 5px;
