--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -34,6 +34,73 @@ header {
   height: 100%;
 }
 
+.form-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #eee;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 500px;
+  background-color: $light;
+  border-radius: 10px;
+  padding: 30px 15px;
+  box-shadow: 0 0 10px -7px #000;
+
+  .error-alert {
+    background-color: lighten($red, 50%);
+    border-radius: 10px;
+    padding: 5px 15px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border: 1px solid $red;
+  }
+
+  .form-title {
+    font-size: 40px;
+    margin-bottom: 30px;
+  }
+  .field {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  .inp-field {
+    height: 35px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .btn-primary {
+    width: 40%;
+    align-self: center;
+    margin-top: 30px;
+  }
+
+  .have-acc {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: 14px;
+    align-self: flex-end;
+    margin-top: 20px;
+  }
+
+  a {
+    color: darken($primary, 20%);
+  }
+}
+
 .category-block {
   display: flex;
   justify-content: center;
