update ui and logic of admin page

--- a/src/styles/controls.scss
+++ b/src/styles/controls.scss
@@ -38,3 +38,12 @@
     cursor: pointer;
   }
 }
+
+.inp-field {
+  height: 35px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+  padding-left: 15px;
+  padding-right: 15px;
+}
