--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -42,6 +42,65 @@ header {
   background-color: #eee;
 }
 
+.admin-page {
+  display: flex;
+  flex-direction: column;
+  background-color: #eee;
+  height: 100vh;
+  // padding: 120px 50px;
+}
+
+.admin-controls {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px 0px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.admin-table {
+  border-radius: 10px;
+  background-color: $light;
+  margin-left: 50px;
+  margin-right: 50px;
+
+  tr {
+    transition: 0.2s ease;
+    &:hover {
+      background-color: #eee;
+      cursor: pointer;
+    }
+  }
+
+  td {
+    padding: 10px 10px;
+    border-right: 1px solid #eee;
+    &:last-child {
+      border-right: none;
+    }
+  }
+
+  th {
+    border-bottom: 1px solid #eee;
+    padding: 15px 10px;
+  }
+}
+
+.modal-background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  overflow: auto;
+  z-index: 1000;
+  transition: 0.3s linear;
+  top: 0;
+}
+
 .form-group {
   display: flex;
   flex-direction: column;
@@ -70,15 +129,6 @@ header {
     flex-direction: column;
     margin-top: 5px;
     margin-bottom: 5px;
-  }
-
-  .inp-field {
-    height: 35px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    outline: none;
-    padding-left: 15px;
-    padding-right: 15px;
   }
 
   .btn-primary {
