--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -47,7 +47,63 @@ header {
   flex-direction: column;
   background-color: #eee;
   height: 100vh;
-  // padding: 120px 50px;
+}
+
+.user-page {
+  display: flex;
+  height: 100vh;
+  flex-direction: row;
+
+  .no-info {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    font-weight: 300;
+  }
+
+  .user-history {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    // background-color: #eee;
+    border-left: 1px solid #ccc;
+    padding: 25px 15px;
+
+    .orders-list {
+      margin-top: 30px;
+
+      .no-orders {
+        font-weight: 300;
+      }
+    }
+  }
+
+  .user-info {
+    display: flex;
+    width: 70%;
+    padding: 50px;
+
+    .user-photo {
+      background-size: cover;
+      background-repeat: no-repeat;
+      width: 300px;
+      height: 300px;
+      border-radius: 50%;
+    }
+
+    .user-name {
+      font-size: 40px;
+      font-weight: 700;
+    }
+
+    .user-email {
+      font-size: 35px;
+      font-weight: 300;
+    }
+  }
 }
 
 .admin-controls {
