--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -53,6 +53,7 @@ header {
   display: flex;
   height: 100vh;
   flex-direction: row;
+  background-color: rgb(245, 245, 245);
 
   .no-info {
     width: 100%;
@@ -64,11 +65,14 @@ header {
     font-weight: 300;
   }
 
+  .user-details {
+    padding: 0 20px;
+  }
+
   .user-history {
     display: flex;
     flex-direction: column;
     width: 30%;
-    // background-color: #eee;
     border-left: 1px solid #ccc;
     padding: 25px 15px;
 
