--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -22,8 +22,9 @@ header {
     color: $light;
     transition: 0.2 ease;
 
-    :hover {
+    &:hover {
       color: $primary;
+      cursor: pointer;
     }
   }
 }
@@ -159,6 +160,106 @@ header {
   z-index: 1000;
   transition: 0.3s linear;
   top: 0;
+}
+
+.cart {
+  width: 40%;
+  height: 100vh;
+  position: absolute;
+  right: 0;
+  background-color: $light;
+  padding: 20px 15px;
+
+  .cart-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  .empty-cart {
+    font-size: 20px;
+    font-weight: 300;
+    color: #888;
+  }
+
+  .cart-products-list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+  }
+
+  .cart-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    position: absolute;
+    padding: 15px 25px;
+    bottom: 20px;
+    font-weight: 300;
+    font-size: 20px;
+    border-top: 1px solid #000;
+  }
+
+  .sum-price {
+    font-size: 25px;
+    font-weight: 700;
+  }
+
+  .cart-products-item {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    position: relative;
+
+    .cart-item-photo {
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: 75px;
+      width: 75px;
+    }
+
+    .cart-item-remove {
+      position: absolute;
+      right: 0;
+      font-size: 25px;
+      transition: 0.2s ease;
+      &:hover {
+        color: $red;
+        cursor: pointer;
+      }
+    }
+
+    .cart-item-quantity {
+      .inp-quantity {
+        height: 35px;
+        padding-left: 10px;
+        font-weight: 300;
+        font-size: 18px;
+        width: 75px;
+        outline: none;
+        border: 1px solid #ccc;
+      }
+    }
+
+    .cart-item-info {
+      display: flex;
+      flex-direction: column;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+
+    .item-info-brand {
+      font-weight: 700;
+      font-size: 20px;
+    }
+
+    .item-info-price {
+      font-weight: 300;
+      font-size: 20px;
+    }
+  }
 }
 
 .form-group {
