--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -240,6 +240,7 @@ header {
         width: 75px;
         outline: none;
         border: 1px solid #ccc;
+        border-radius: 5px;
       }
     }
 
